handlebar additions and confirmation server works

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/burger_style.css" type="text/css"/>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <title>Eat-Da-Burger</title>
+	<meta charset="UTF-8">
+
+	<!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+	<title>Eat-Da-Burger</title>
 </head>
+
 <body>
-    
+	<img src="/assets/img/burger_logo.jpg" width="400px" id="burger_logo">
+
+	{{{ body }}}
+
+	<footer class="burgerFooter">
+		<div class="footer-copyright">
+			<div class="container">
+				<span class="grey-text text-lighten-4">© 2020 Andrew Popp</span>
+				<a class="grey-text text-lighten-4 right" href="https://github.com/APopp524">Reference Work</a>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
