--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,29 +1,88 @@
-html {
-    position: relative;
-    min-height: 100%;
-}
+html 
+
 
 body {
-    margin-bottom: 45px;
+    width: 75%;
+   margin: 0 auto; 
+
+   display: flex;
+   min-height: 100vh;
+   flex-direction: column;
+   background-color: white;
 }
 
-.card-header {
-    background-color: #EE6E73;
-    color: #fff;
+#burger_logo {
+    display: block;
+   margin: auto;
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    height: 45px;
+h1 {
     text-align: center;
-    width: 100%;
-    background-color: #343A40;
-    border-top: 5px solid #EE6E73;
+    font-family: 'Indie Flower', cursive;
+    font-size: 90px;
+    margin: 50px;
 }
 
-footer small {
-    line-height: 40px;
-    color: #D2B773;
-    font-size: 12px;
+.burgerAvailable {
+    font-family: 'Indie Flower', cursive;
+    font-weight: normal;
+    font-size: 20px;
+    text-align: center;
+
+    border-radius: 25px;
+    width: 100%;
+    margin: 10px;
+    padding: 10px;
+    background-color: #b7ffc2;
+    border: none;
+}
+
+.burgerAvailable:hover {
+    background-color: #81ff94;
+}
+
+.burgerEaten {
+    font-family: 'Crafty Girls', cursive;
+    font-weight: normal;
+    font-size: 20px;
+    text-align: center;
+
+    border-radius: 25px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #ffd1c9;
+}
+
+h2 {
+     text-align: center;
+    font-family: 'Fontdiner Swanky', cursive;
+    font-size: 40px;
+    margin: 50px;
+}
+
+.formContainer {
+    background-color: orange;
+}
+
+.addBurgerButton {
+    font-family: 'Crafty Girls', cursive;
+    font-weight: normal;
+    font-size: 20px;
+    text-align: center;
+
+    border-radius: 25px;
+    width: 100%;
+    margin: 0;
+    padding: 10px;
+    background-color: #FFC04C;
+    border: none;
+}
+
+.addBurgerButton:active {
+   background-color: #FFC04C;
+}
+
+.burgerFooter {
+   background-color: #FFC04C;
+   padding: 20px 0;
 }
