--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,14 +1,11 @@
-html 
+html {
+    background-color: #513629;
+}
 
 
 body {
-    width: 75%;
-   margin: 0 auto; 
-
-   display: flex;
-   min-height: 100vh;
-   flex-direction: column;
-   background-color: white;
+    
+   background-color: #513629;
 }
 
 #burger_logo {
@@ -19,6 +16,7 @@ body {
 h1 {
     text-align: center;
     font-family: 'Indie Flower', cursive;
+    color: white;
     font-size: 90px;
     margin: 50px;
 }
@@ -33,16 +31,16 @@ h1 {
     width: 100%;
     margin: 10px;
     padding: 10px;
-    background-color: #b7ffc2;
+    background-color: #81965e;
     border: none;
 }
 
 .burgerAvailable:hover {
-    background-color: #81ff94;
+    background-color: #9dc260;
 }
 
 .burgerEaten {
-    font-family: 'Crafty Girls', cursive;
+    font-family: 'Indie Flower', cursive;
     font-weight: normal;
     font-size: 20px;
     text-align: center;
@@ -50,39 +48,40 @@ h1 {
     border-radius: 25px;
     margin: 10px;
     padding: 10px;
-    background-color: #ffd1c9;
+    background-color: #d4cebe;
 }
 
 h2 {
      text-align: center;
-    font-family: 'Fontdiner Swanky', cursive;
+     font-family: 'Indie Flower', cursive;
     font-size: 40px;
     margin: 50px;
+    color: white;
 }
 
 .formContainer {
-    background-color: orange;
+    background-color: #d4cebe;
+    padding: 55%;
 }
 
 .addBurgerButton {
-    font-family: 'Crafty Girls', cursive;
+    font-family: 'Indie Flower', cursive;
     font-weight: normal;
     font-size: 20px;
     text-align: center;
-
     border-radius: 25px;
-    width: 100%;
-    margin: 0;
-    padding: 10px;
-    background-color: #FFC04C;
+    width: 50;
+    margin: 10px;
+    padding: 16px;
+    background-color: #ae4b45;
     border: none;
 }
 
 .addBurgerButton:active {
-   background-color: #FFC04C;
+   background-color: #f3c314;
 }
 
 .burgerFooter {
-   background-color: #FFC04C;
+   background-color: #f3c314;
    padding: 20px 0;
 }
