--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
 
 <div class="row">
   <div class="col s12">
-    <form action="/burgers" method="POST">
+    <form action="/burgers" method="POST" style="text-align: center;">
       <input type="text" id="name" name="burger_name" placeholder="type here">
       <button type="submit" class="addBurgerButton">Add The Burger</button>
     </form>
