--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 		<div class="footer-copyright">
 			<div class="container">
 				<span class="grey-text text-lighten-4">© 2020 Andrew Popp</span>
-				<a class="grey-text text-lighten-4 right" href="https://github.com/APopp524">Reference Work</a>
+				<a class="grey-text text-lighten-4 right" href="https://github.com/APopp524">GitHub <Link></Link></a>
 			</div>
 		</div>
 	</footer>
