--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -17,7 +17,7 @@ h1 {
     text-align: center;
     font-family: 'Indie Flower', cursive;
     color: white;
-    font-size: 90px;
+    font-size: 130px;
     margin: 50px;
 }
 
@@ -83,5 +83,6 @@ h2 {
 
 .burgerFooter {
    background-color: #f3c314;
-   padding: 20px 0;
+   padding: 20px;
+   margin-top: 70px;
 }
